--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
-    background-image: url(back2.jpg);
+    background: url(back2.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 }
 
-#navbar ul {
+#navbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -15,6 +18,16 @@ body {
     background-color: #f1f1f1;
 }
 
+#menu-icon{
+  background: url(menu-icon.png);
+  display: hidden;
+  width: 32px;
+  height: 32px;
+}
+
+@media only screen and (max-width: 640px){
+  menu
+}
 li a {
     display: block;
     color: black;
@@ -87,6 +100,10 @@ div.EmptySpace{
 
 input {
   width: 300px;
+  height: 25px;
+}
+#message{
+  width: 400px;
   height: 100px;
 }
 
@@ -119,7 +136,7 @@ li{
   color: white;
 }
 /* displayed on on desktop view */
-@media (min-width: 500px){
+@media screen and (min-width: 500px){
   .container, .footer-container, .flex-container{
     display: flex;
   }
