--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ li{
   color: white;
 }
 /* displayed on on desktop view */
-@media screen and (min-width: 500px){
+@media only screen and (min-width: 500px){
   .container, .footer-container, .flex-container{
     display: flex;
   }
