--- a/style.css
+++ b/style.css
@@ -136,8 +136,12 @@ li{
   color: white;
 }
 .footer{
+  width: 100%;
   position:fixed;
   bottom:0;
+}
+.header{
+  position:fixed;
 }
 /* displayed on on desktop view */
 @media only screen and (min-width: 500px){
