--- a/style.css
+++ b/style.css
@@ -78,16 +78,17 @@ div.EmptySpace{
 
 #connect {
   display: block;
-  width: 400px;
+  width: 350px;
   height: 50px;
   background: #606060;
   text-align: center;
   font-weight: bold;
-  font-size: 200%;
+  font-size: 150%;
   border-radius: 20px;
   margin: 10px auto;
   color: white;
   text-decoration: none;
+  padding-top: 7px;
 }
 
 #connect:hover{
@@ -103,7 +104,7 @@ input {
   height: 25px;
 }
 #message{
-  width: 400px;
+  width: 350px;
   height: 100px;
 }
 
